Closed
Bug 668295
Opened 13 years ago
Closed 13 years ago
IonMonkey: Implement allocation reification stage of linear scan register allocator
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: adrake, Assigned: adrake)
References
Details
Attachments
(1 file)
4.23 KB,
patch
|
dvander
:
review+
|
Details | Diff | Splinter Review |
Tracking bug for the associated FIXME in the code
Assignee | ||
Comment 1•13 years ago
|
||
Lots of room for optimization here, although it seems quite performant already. This is a WIP, it needs to be refactored a tiny bit and to gain more assertions. Additionally, there appears to be an issue wherein lowered unboxes for function parameters have snapshots containing entries for sequentially later instructions, which I am obviously unable to fill in.
Attachment #544434 -
Flags: review?(dvander)
Comment on attachment 544434 [details] [diff] [review]
Patch v0 (WIP)
Review of attachment 544434 [details] [diff] [review]:
-----------------------------------------------------------------
::: js/src/ion/IonLIR.h
@@ +707,4 @@
> JS_ASSERT(i < numSlots_);
> return &slots_[i];
> }
> + void setEntry(size_t i, LAllocation alloc) {
const LAllocation &alloc
@@ +751,4 @@
> }
> }
>
> + void replace(LAllocation alloc) {
Ditto
Attachment #544434 -
Flags: review?(dvander) → review+
Assignee | ||
Comment 3•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•