Bug 668295: Implement reification stage of IonMonkey linear scan register allocator. r=dvander